Configurando deploy de k8s

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Create kubeconfig
         run: |
           mkdir ${HOME}/.kube
-          echo ${{ secrets.KUBECONFIG }} | base64 --decode > ${HOME}/.kube/config
+          echo '${{ secrets.KUBECONFIG }}' | base64 --decode > ${HOME}/.kube/config
           cat ${HOME}/.kube/config
 
       - name: Use context
