Agregando control de ejecuciones de CICD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,12 @@
 name: Python lint and CI/CD
 
-on: [pull_request]
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches:
+      - 'feature/**'
 
 jobs:
   lint:
