Corrigiendo comandos de CICD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,8 +69,8 @@ jobs:
           echo '${{ secrets.KUBECONFIG }}' | base64 --decode > ${HOME}/.kube/config
           cat ${HOME}/.kube/config
 
-      - name: Use context
-        run: kubectl config use-context octobay-api
+      # - name: Use context
+      #   run: kubectl config use-context octobay-api
 
       - name: Deploy to K8s
         run: kubectl apply -f k8s/
