--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,4 @@ jobs:
       #   run: kubectl config use-context octobay-api
 
       - name: Deploy to K8s
-        run: |
-          ls -l
-          pwd
-          kubectl apply -f k8s/
+        run: kubectl apply -f .k8s/
