--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,14 +58,13 @@ jobs:
           push: true
           tags: bramenn/olimpus:latest
 
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Create kubeconfig
         run: |
           mkdir ${HOME}/.kube
           echo '${{ secrets.KUBECONFIG }}' | base64 --decode > ${HOME}/.kube/config
-          cat ${HOME}/.kube/config
-
-      # - name: Use context
-      #   run: kubectl config use-context octobay-api
 
       - name: Deploy to K8s
         run: kubectl apply -f .k8s/
