--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,3 +68,5 @@ jobs:
 
       - name: Deploy to K8s
         run: kubectl apply -f .k8s/
+        env:
+          POSTGRESURI: ${{ secrets.POSTGRESURI }}
