--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,3 +70,6 @@ jobs:
         run: kubectl apply -f .k8s/
         env:
           POSTGRESURI: ${{ secrets.POSTGRESURI }}
+        with:
+          input: deployment-api.yml
+          output: deploy.yml
