--- a/.k8s/deployment-api.yaml
+++ b/.k8s/deployment-api.yaml
@@ -19,6 +19,6 @@ spec:
         image: bramenn/olimpus
         env:
         - name: POSTGRES_URI
-          value: "postgresql://bramen:bramen@/0.tcp.ngrok.io:12978/olimpus?sslmode=disable"
+          value: "postgresql://bramen:bramen@0.tcp.ngrok.io:12978/olimpus"
         ports:
         - containerPort: 80
