--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,13 @@ jobs:
         pre-commit run -av check-yaml
         pre-commit run -av check-added-large-files
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -36,7 +43,7 @@ jobs:
   docker:
     if: "github.ref_name == 'master'"
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [lint, test]
     environment: deploy
     steps:
       -
