--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Test with pytest
       run: pytest test
 
-  docker:
+  deployapp:
     if: "github.ref_name == 'master'"
     runs-on: ubuntu-latest
     needs: [lint, test]
