Limite de las creaciones y compras agregado

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 POSTGRES_URI=postgresql://user:password@host:port/db
+MAX_TICKET_BY_VIEWER=3
+DEFAUL_FREE_LIMIT_VIEWERS=10
+DEFAUL_FREE_LIMIT_PARTICIPANTS=5
