--- a/.k8s/deployment-api.yaml
+++ b/.k8s/deployment-api.yaml
@@ -19,6 +19,12 @@ spec:
         image: bramenn/olimpus
         env:
         - name: POSTGRES_URI
-          value: "postgresql://bramen:bramen@0.tcp.ngrok.io:12978/olimpus"
+          value: "postgresql://bramen:bramen@0.tcp.ngrok.io:19056/olimpus"
+        - name: MAX_TICKET_BY_VIEWER
+          value: 3
+        - name: DEFAUL_FREE_LIMIT_VIWERS
+          value: 10
+        - name: DEFAUL_FREE_LIMIT_PARTICIPANTS
+          value: 5
         ports:
         - containerPort: 80
