Hacer rollout cuando se suben los cambios

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,4 +74,6 @@ jobs:
           echo '${{ secrets.KUBECONFIG }}' | base64 --decode > ${HOME}/.kube/config
 
       - name: Deploy to K8s
-        run: kubectl apply -f .k8s/
+        run: |
+          kubectl apply -f .k8s/
+          kubectl rollout restart deployment/olimpus-deployment
